@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-01-28
+ * Added https://github.com/tbosch/autofill-event to wing.js so that all browsers trigger events uniformly on autofill
+ * Force UTC time zone on DateTime objects going into/out of the database.
+
 2016-01-26
  * Wing::ContentFilter makes a shorter prettier note for external links now.
 
